--- a/Fiap.Web.AspNet2/Views/Cliente/Detalhe.cshtml
+++ b/Fiap.Web.AspNet2/Views/Cliente/Detalhe.cshtml
@@ -18,10 +18,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label">Representante</label>
-
-                        <Select class="form-control col-5" disabled="" asp-for="RepresentanteId" asp-items="@ViewBag.Representantes">
-                         <option>Selecione</option>    
-                        </Select>
+                        <input class="form-control col-5" asp-for="Representante.NomeRepresentante" readonly="readonly"/>
                     </div>
                     <div class="form-group">
                         <label class="control-label" asp-for="DataNascimento"></label>
