--- a/Fiap.Web.AspNet2/Views/Representante/Index.cshtml
+++ b/Fiap.Web.AspNet2/Views/Representante/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IList<RepresentanteModel>
+﻿@using Fiap.Web.AspNet2.Views.ViewModel
+@model IEnumerable<RepresentanteViewModel>
 
 <div class="container">
     <div class="row">
